tests/ui/fail/log_path_expr.stderr
error: parsing failed: failed to parse `data.a` as a field-value expression
  --> fail/log_path_expr.rs:14:48
   |
14 |     emit::info!("Logging with a deeply nested {data.a}");
   |                                                ^^^^^^
